<resources>
    <string name="app_name">HW3</string>
    <string name="Height">身高: </string>
    <string name="Weight">體重: </string>
    <string name="moveamount">活動量: </string>
    <string name="KneeHeight">膝長: </string>
    <string name="Age">年齡: </string>
    <string name="standardweight">標準體重: </string>
    <string name="weightrange">體重合理範圍: </string>
    <string name="calories">每日所需熱量: </string>
    <string name="reset">Reset</string>
    <string name="error">請完整輸入</string>
    <string name="hintInt">0</string>
    <string name="hintFloat">0.0</string>
    <string name="hintRange">1~3</string>
</resources>